Avoid pageTitle line break on iPhone 4-5

--- a/style.css
+++ b/style.css
@@ -43,8 +43,6 @@ a:active {
   border-bottom-color: #8D897E;
 }
 
-
-
 .pageWrap {
   max-width: 75rem;
   margin: 0 auto;
@@ -66,7 +64,7 @@ a:active {
 
 .pageTitle {
   font-size: 1.125rem;
-  letter-spacing: .275em;
+  letter-spacing: .145rem;
   text-transform: uppercase;
   line-height: 1.4;
   font-weight: 400;
@@ -278,6 +276,13 @@ figcaption {
     display: inline-block;
     width: 48%;
     margin: 1% 0 1% 1%;
+  }
+}
+
+
+@media only screen and (min-width: 23rem) {
+  .pageTitle {
+    letter-spacing: .32rem;
   }
 }
 
